tests/snapshots/acceptance_scroll__jump_to_bottom_shift_g.snap
---
source: tests/acceptance_scroll.rs
expression: bottom_output
---
Model: Unknown | Main Agent | ? | 0 tools, 0 agents, 0 skills
┌Main Agent (20 entries)───────────────────────────────────────────────────────┐
│Now let me follow the coordinator protocol:                                   │
│                                                                              │
│1. **Setup**: Run the prerequisites check                                     │
│2. **Get feature branch and epic**: Get current branch and find epic          │
│3. **Check checklists**: Check if there are any checklists                    │
│4. **Load implementation context**: Read the spec files                       │
│5. **Find ready work**: Use bd ready to find available work                   │
│6. **Execute implementation loop**: Delegate to subagents                     │
│                                                                              │
│Let me start with steps 1-3 in parallel.                                      │
│                                                                              │
│Now let me follow the coordinator protocol. Starting with setup, branch/epic v│
│                                                                              │
│🔧' Tool: Bash                                                                 │
│  {                                                                           │
│    "command": "./.specify/scripts/bash/check-prerequisites.sh --json 2>/dev/n│
│    "description": "Check prerequisites for spec setup"                       │
│  }                                                                           │
│                                                                              │
│🔧  Tool: Bash                                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
