tests/snapshots/acceptance_scroll__jump_to_top_g.snap
---
source: tests/acceptance_scroll.rs
expression: top_output
---
Model: Unknown | Main Agent | ? | 0 tools, 0 agents, 0 skills
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main Agent                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main Agent (20 entries)───────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
││  3 Let me understand the task:                                              │
││                                                                             │
││    1. I'm a coordinator agent that CANNOT read/write code directly          │
││    (+10 more lines)                                                         │
│── 9 in / 1 out / $0.06 | Context: 37.4k (18%) ──                             │
││  4 I'll start by loading the required skill and then following the coordinat│
││    or protocol.                                                             │
│── 9 in / 1 out / $0.06 | Context: 74.9k (37%) ──                             │
││  5 🔧+ Tool: Skill                                                           │
││      {                                                                      │
││        "skill": "efficient-subagent-orchestration"                          │
││      }                                                                      │
│── 9 in / 1 out / $0.06 | Context: 112.3k (56%) ──                            │
││  6 🔧+ Tool: Skill                                                           │
││      {                                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
