tests/snapshots/acceptance_scroll__page_down_2x.snap
---
source: tests/acceptance_scroll.rs
expression: second_page_output
---
Model: Unknown | Main Agent | ? | 0 tools, 0 agents, 0 skills
┌Main Agent (20 entries) ▶─────────────────────────────────────────────────────┐
│3. **Check checklists**: Check if there are any checklists                    │
│4. **Load implementation context**: Read the spec files                       │
│5. **Find ready work**: Use bd ready to find available work                   │
│6. **Execute implementation loop**: Delegate to subagents                     │
│                                                                              │
│Let me start with steps 1-3 in parallel.                                      │
│                                                                              │
│Now let me follow the coordinator protocol. Starting with setup, branch/epic v│
│erification, and checking for ready work:                                     │
│                                                                              │
│Tool: Bash                                                                    │
│  {                                                                           │
│    "command": "./.specify/scripts/bash/check-prerequisites.sh --json 2>/dev/n│
│  l || echo '{\"error\": \"script not found\"}'",                             │
│    "description": "Check prerequisites for spec setup"                       │
│  }                                                                           │
│                                                                              │
│Tool: Bash                                                                    │
│  {                                                                           │
│    "command": "git branch --show-current",                                   │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
