tests/snapshots/acceptance_scroll__scroll_down_j_key.snap
---
source: tests/acceptance_scroll.rs
expression: scrolled_output
---
Model: Unknown | Main Agent | ? | 0 tools, 0 agents, 0 skills
┌Main Agent (20 entries)───────────────────────────────────────────────────────┐
│                                                                              │
│Let me understand the task:                                                   │
│                                                                              │
│1. I'm a coordinator agent that CANNOT read/write code directly               │
│2. I need to claim ONE bead from the epic cclv-07v                            │
│3. I need to first run the efficient-subagent-orchestration skill             │
│4. I need to follow the protocol: setup, find epic, check checklists, load con│
│                                                                              │
│Let me start by loading the required skill and then following the protocol.   │
│                                                                              │
│First, I'll invoke the efficient-subagent-orchestration skill as required.    │
│                                                                              │
│I'll start by loading the required skill and then following the coordinator pr│
│                                                                              │
│🔧  Tool: Skill                                                                │
│  {                                                                           │
│    "skill": "efficient-subagent-orchestration"                               │
│  }                                                                           │
│                                                                              │
│🔧  Tool: Skill                                                                │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
