tests/snapshots/acceptance_scroll__scroll_down_j_key_3x.snap
---
source: tests/acceptance_scroll.rs
expression: scrolled_output
---
Model: Unknown | Main Agent | ? | 0 tools, 0 agents, 0 skills
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main Agent                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main Agent (20 entries) ▶─────────────────────────────────────────────────────┐
││                                                                             │
││     1. I'm a coordinator agent that CANNOT read/write code directly         │
││     (+8 more lines)                                                         │
│                                                                              │
││   4 I'll start by loading the required skill and then following the coordina│
││     otocol.                                                                 │
│                                                                              │
││   5 🔧' Tool: Skill                                                          │
││       {                                                                     │
││         "skill": "efficient-subagent-orchestration"                         │
││       }                                                                     │
│                                                                              │
││   6 🔧  Tool: Skill                                                          │
││       {                                                                     │
││         "skill": "beads-project-tracking"                                   │
││       }                                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
