tests/snapshots/acceptance_scroll__scroll_up_k_key.snap
---
source: tests/acceptance_scroll.rs
expression: scrolled_up_output
---
Model: Unknown | Main Agent | ? | 0 tools, 0 agents, 0 skills
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main Agent                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main Agent (20 entries) ▶─────────────────────────────────────────────────────┐
││       }                                                                     │
│                                                                              │
││   7 Launching skill: efficient-subagent-orchestration                       │
│                                                                              │
││   8 Base directory for this skill: /home/claude/.claude/skills/efficient-sub│
││     orchestration                                                           │
││                                                                             │
││     (+179 more lines)                                                       │
│                                                                              │
││   9 Launching skill: beads-project-tracking                                 │
│                                                                              │
││  10 Base directory for this skill: /home/claude/.claude/skills/beads-project│
││     ing                                                                     │
││                                                                             │
││     (+210 more lines)                                                       │
│                                                                              │
││  11 Now let me follow the coordinator protocol:                             │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
