tests/snapshots/acceptance_scroll__scroll_up_k_key_5x.snap
---
source: tests/acceptance_scroll.rs
expression: scrolled_up_output
---
Model: Unknown | Main Agent | ? | 0 tools, 0 agents, 0 skills
┌Main Agent (20 entries) ▶─────────────────────────────────────────────────────┐
│   6│🔧a Tool: Skill                                                           │
│   6│  {                                                                      │
│   6│    "skill": "beads-project-tracking"                                    │
│   6│  }                                                                      │
│                                                                              │
│   7│Launching skill: efficient-subagent-orchestration                        │
│                                                                              │
│   8│Base directory for this skill: /home/claude/.claude/skills/efficient-suba│
│   8│orchestration                                                            │
│   8│                                                                         │
│   8│(+179 more lines)                                                        │
│                                                                              │
│   9│Launching skill: beads-project-tracking                                  │
│                                                                              │
│  10│Base directory for this skill: /home/claude/.claude/skills/beads-project-│
│  10│ing                                                                      │
│  10│                                                                         │
│  10│(+210 more lines)                                                        │
│                                                                              │
│  11│Now let me follow the coordinator protocol:                              │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
